--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -24,3 +24,80 @@ img {
 .card-img-top {
   height: 18rem;
 }
+
+/* Modal Styles */
+
+.opening-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 2;
+}
+
+.text-size-4 {
+  font-size: 4rem;
+}
+
+.display-none {
+  display: none;
+}
+
+.vis-hidden {
+  visibility: hidden;
+  z-index: -2;
+}
+
+.fade-in {
+  animation: fade-in 1s;
+  animation-fill-mode: forwards;
+}
+
+.fade-out {
+  animation: fade-out .75s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fade-in {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes fade-out {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+.slide-in {
+  animation: slide-in .75s;
+  animation-fill-mode: forwards;
+}
+
+.slide-out {
+  animation: slide-out .75s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide-in {
+  0% { transform: translate3d(0, 100%, 0); }
+  100% { transform: translate3d(0, 0%, 0); }
+}
+
+@keyframes slide-out {
+  0% { transform: translate3d(0, 0%, 0); }
+  100% { transform: translate3d(0, 100%, 0); }
+}
+
+.checkout-lables {
+  font-size: .75rem;
+}
+
+.object-fit-width {
+  width: 100%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
