--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -4,9 +4,7 @@ h1 {
   font-weight:800;
 }
 
-i {
-  font-size: 2rem;
-}
+
 
 nav {
   color: white;
@@ -23,6 +21,11 @@ img {
 
 .card-img-top {
   height: 18rem;
+}
+
+
+.item-card {
+  width: 32%;
 }
 
 /* Modal Styles */
@@ -100,4 +103,19 @@ img {
 
 html {
   scroll-behavior: smooth;
+}
+
+
+/* Media queries   */
+
+@media screen and (min-width: 601px) {
+i {
+  font-size: 2rem;
+}
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (max-device-width: 667px) and (min-device-width: 375px) and (orientation: portrait) {
+.item-card {
+    width: 100%;
+}
 }
