--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,9 @@
+body {
+  background-color: rgb(240, 241, 241);
+}
+
+
+
 h1 {
   display: inline-block;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
@@ -10,23 +16,90 @@ nav {
   color: white;
 }
 
-img {
-  object-fit: contain;
-  width: 100%;
+.header {
+    background-color: rgba(5, 19, 54, .8);
+    color: white;
 }
 
-.card {
-  height: 100%;
+.bg-knight {
+  background-color: rgba(5, 19, 54, .8)
 }
+
+
 
 .card-img-top {
   height: 18rem;
+}
+.detail-image-display {
+    height: 400px;
+    object-fit: contain;
 }
 
 
 .item-card {
   width: 32%;
+    background-color: white;
+
+    /* background-color: rgba(255, 255, 255, .1) */
+
 }
+
+.blue-button {
+  width: 100%;
+  background-color: rgba(5, 19, 54, .8);
+  color: white;
+  border-radius: 3px;
+  padding: 15px 0;
+}
+
+.blue-button:hover {
+  width: 100%;
+  background-color: white;
+  color: black;
+  border-radius: 3px;
+  border: 1px solid rgba(5, 19, 54, .8);
+  padding: 15px 0;
+}
+
+.blue-button:active {
+  width: 100%;
+  background-color: grey;
+  color: black;
+  border-radius: 3px;
+  border: 1px solid rgba(5, 19, 54, .8);
+  padding: 15px 0;
+  transform: scale(.9);
+}
+
+.grow {
+  transition: all .2s ease-in-out;
+}
+
+.grow:hover {
+  transform: scale(1.15);
+  z-index: 1;
+}
+
+
+/* Notice styles */
+
+
+.notice-container {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+.notice-body-container {
+  background-color: rgba(5, 19, 54, 1);
+  height: 4vw;
+}
+
+.notice-p {
+  color: white;
+  font-weight:700;
+}
+
 
 /* Modal Styles */
 
@@ -105,12 +178,120 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Cart Summary page styling */
+
+.thumbnail-container {
+  height: 75px;
+  background-color: white;
+
+}
+
+.thumbnail {
+  height: 100%;
+  object-fit: contain;
+  border: 1px solid rgb(225, 225, 225);
+}
+
+.cart-image {
+  width: 100%;
+}
+
+/* Carousel styling */
+
+
+.w-60 {
+  width: 67%;
+}
+
+.grey {
+  color: rgb(162, 162, 162);
+}
+
+.white-bg {
+  background-color: white;
+}
+
+.muted-button {
+  color: rgb(183, 183, 183);
+}
+.muted-button:hover {
+  cursor: default;
+}
+
+.detail-image-display-container {
+  margin-right: 20px;
+}
+
+.detail-image-display {
+  height: 400px;
+  object-fit: contain;
+}
+
+.carousel-container {
+  height: 100px;
+  width: 80%;
+  overflow: hidden;
+  border-radius:4px;
+
+}
+
+.carousel-box {
+  height: 100px;
+  width: 200%;
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+}
+
+.image-block{
+  height: 100%;
+  width: 50%;
+}
+
+.block-two {
+  background-color: #e65100;
+}
+
+.carousel-button {
+  margin: auto;
+  cursor: pointer;
+  font-size:24px;
+}
+
+.move-right {
+  transform: translateX(-50%);
+  -webkit-transform:translateX(-50%);
+}
+
+.thumbnail-container {
+  height: 75px;
+  background-color: white;
+
+}
+
+.thumbnail {
+  height: 100%;
+  object-fit: contain;
+  border: 1px solid rgb(225, 225, 225);
+}
+
+.cart-image {
+  width: 100%;
+}
+
+img {
+    height: 55%;
+    object-fit: scale-down;
+}
 
 /* Media queries   */
 
 @media screen and (min-width: 601px) {
 i {
   font-size: 2rem;
+}
+
+.fa-chevron-circle-left {
+  font-size: 1rem;
 }
 }
 
