--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: rgb(240, 241, 241);
 }
@@ -40,9 +44,17 @@ nav {
 
 .item-card {
   width: 32%;
-    background-color: white;
-
+  background-color: white;
+  transition: .3s all;
     /* background-color: rgba(255, 255, 255, .1) */
+}
+
+.item-card:hover {
+  width: 32%;
+  background-color: white;
+  transition: .3s all;
+  transform: translateY(-3px);
+  box-shadow: 0 0.5rem .75rem rgba(0, 0, 0, .075);
 
 }
 
@@ -100,7 +112,7 @@ nav {
 }
 
 .grow:hover {
-  transform: scale(1.15);
+  transform: scale(1.1);
   z-index: 1;
 }
 
@@ -112,6 +124,7 @@ nav {
     position: fixed;
     top: 0;
     z-index: 1;
+    margin-top: -40px;
 }
 
 .notice-body-container {
@@ -134,7 +147,13 @@ nav {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, .5);
-  z-index: 2;
+  z-index: 20;
+
+}
+
+.custom-control-input-blue:checked~.custom-control-label::before {
+  border-color: rgba(79, 105, 162, 1) !important;
+  background-color: rgba(79, 105, 162, 1) !important;
 }
 
 .text-size-4 {
@@ -151,12 +170,12 @@ nav {
 }
 
 .fade-in {
-  animation: fade-in 1s;
+  animation: fade-in .66s;
   animation-fill-mode: forwards;
 }
 
 .fade-out {
-  animation: fade-out .75s;
+  animation: fade-out  .66s;
   animation-fill-mode: forwards;
 }
 
@@ -171,23 +190,40 @@ nav {
 }
 
 .slide-in {
-  animation: slide-in .75s;
+  animation: slide-in .66s;
+  animation-fill-mode: forwards;
+}
+
+.slide-down {
+  animation: slide-down .66s;
   animation-fill-mode: forwards;
 }
 
 .slide-out {
-  animation: slide-out .75s;
+  animation: slide-out .66s;
   animation-fill-mode: forwards;
 }
 
+
 @keyframes slide-in {
-  0% { transform: translate3d(0, 100%, 0); }
+  0% { transform: translate3d(0, 30%, 0); }
   100% { transform: translate3d(0, 0%, 0); }
+}
+
+@keyframes slide-down {
+  0% { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(0, 50%, 0); }
+
 }
 
 @keyframes slide-out {
   0% { transform: translate3d(0, 0%, 0); }
-  100% { transform: translate3d(0, 100%, 0); }
+  100% { transform: translate3d(0, 50%, 0); }
+}
+
+a {
+  transition: .3s all;
+  color: #5A4894;
 }
 
 .checkout-lables {
