--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -27,7 +27,51 @@ nav {
 
 .bg-knight {
     background-color: rgba(79, 105, 162, 1);
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
 }
+
+/* Header Video styles */
+
+.hero {
+  position: relative;
+  width: 100%;
+  height: 55vw;
+
+}
+
+.hero-text-header {
+    color: white;
+    z-index: 0;
+    font-family: 'Permanent Marker', cursive;
+}
+
+.hero-text {
+    color: white;
+    z-index: 0;
+}
+
+.header-video {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+img.header-gif {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+video{
+  width: 100%;
+}
+
 
 
 
