--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -71,15 +71,34 @@ nav {
   z-index: -1;
 }
 
-.video-overlay {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  width: 100%;
-  height: 110%;
-  background-color: rgba(0,0,0,.2);
-  z-index: 0;
+/* ----------- Video Overlay ----------- */
+
+.videoContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    //padding: 20px;
+    border-radius: 5px;
+    background-attachment: scroll;
+    overflow: hidden;
 }
+.videoContainer video {
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
+    z-index: 1;
+}
+.videoContainer .overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+    background: rgba(0, 0, 0, .5);
+    opacity: 0.5;
+}
+
 
 img.header-gif {
   position: absolute;
@@ -466,8 +485,12 @@ i {
     z-index: 1;
   }
   .notice-body-container {
-    background-color: rgb(250, 171, 73);
+    background-color: rgba(79, 105, 162, 1);
     height: 60px;
+  }
+  .video-overlay {
+    top: 40px;
+    height: 32%;
   }
 
 }
