--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -20,6 +20,10 @@ nav {
   color: white;
 }
 
+.background-dark {
+ background-color: rgba(79, 105, 162, 1);
+}
+
 .header {
     background-color: rgba(79, 105, 162, 1);
     color: white;
@@ -55,7 +59,8 @@ nav {
 .hero-text {
     color: white;
     z-index: 0;
-    text-shadow: 0 0 3px rgb(31 58 118 / 82%);
+    text-shadow: 0px 0px 9px rgba(0,0,0,.75);
+
 }
 
 .header-video {
@@ -77,7 +82,6 @@ nav {
     position: relative;
     width: 100%;
     height: 100%;
-    //padding: 20px;
     border-radius: 5px;
     background-attachment: scroll;
     overflow: hidden;
@@ -433,6 +437,17 @@ img {
     height: 55%;
     object-fit: scale-down;
 }
+
+h3 span, h6 span {
+  color: white;
+  font-family: 'Bigshot One', cursive;;
+}
+
+.background-dark .container {
+ color: white;
+}
+
+
 
 /* Media queries   */
 
