--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -564,3 +564,10 @@ i {
     font-size: 1.2rem;
   }
 }
+
+/* Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+.detail-image-display-container {
+    margin-right: 0px;
+}
+}
